Added checkout monitoring.

--- a/commerce_enchanced_ecommerce.libraries.yml
+++ b/commerce_enchanced_ecommerce.libraries.yml
@@ -24,6 +24,11 @@ remove_from_cart:
   js:
     js/removeFromCart.js: {}
 
+checkout:
+  version: VERSION
+  js:
+    js/checkout.js: {}
+
 checkout_complete:
   version: VERSION
   dependencies:
